[package]
name = "storage_engine"
version = "0.1.0"
authors = ["t-iwakawa-vg <Takehiko_Iwakawa@voyagegroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
clap = "3.0.0-beta.1"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.55"